--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -8,6 +8,7 @@ textarea {
   width: 100%;
   height: 4em;
 }
+
 .counter {
   float: right;
   font-style: italic;
@@ -24,6 +25,7 @@ textarea {
   border: 1px solid #a5a5a5;
   border-radius: 10px;
   opacity: .5;
+  word-break: break-word;
 }
 .tweet-header {
   width: 100%;
@@ -58,4 +60,9 @@ opacity: 1;
     margin-left:9px;
     padding:1px 5px 0px 5px;
     font-size: small;
+}
+
+i {
+  position: relative;
+  left: 18rem;
 }
